# openhands-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.openhands  README.md
openhands-agent/: README.md  docker_runtime.py  pyproject.toml  rust_env.py
openhands-agent-server-rs/: Cargo.toml
openhands-agent-server-rs/bash_events/: 20260102062456_BashCommand_18604f24dfb34404924329627e242a73  20260102062456_BashOutput_18604f24dfb34404924329627e242a73_36e3f40686cd4c5da9b2477937995925  20260102062457_BashCommand_addea92dd84246d2b2b4a4934c5ac637  20260102062457_BashOutput_addea92dd84246d2b2b4a4934c5ac637_c55fa1ed8d15474d9205d37962014a4d
openhands-agent-server-rs/src/: bash_service.rs  conversation_api.rs  file_service.rs  handlers.rs  main.rs  models.rs  patch.rs  service.rs  system.rs
openhands-agent-server-rs/src/tools/: file_editor.rs  file_ops.rs  glob.rs  grep.rs  mod.rs  task_tracker.rs
openhands-agent/openhands_agent/: __init__.py  agent.py  config.py  runtime.py  tracing.py
openhands-agent/openhands_agent/exam/: __init__.py  creator.py  exam.py  repository.py  runner.py  topic.py
openhands-agent/openhands_agent/runtime/: __init__.py  rust_env.py
openhands-agent/tests/: conftest.py  test_agent.py  test_exam_lifecycle.py  test_rust_env.py  utils.py
openhands-internal-mcp-client/: .gitignore  debug_sccache.py  docker_runtime.py  main.py  pyproject.toml  rust_env.py  simple_sccache_test.py  test_agent.py  test_agent_docker.py  test_connection.py  test_docker.py  test_rust_env.py  test_tokio_cache.py
openhands-internal-mcp-client/.cargo_cache_test/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/3/s/: syn
openhands-internal-mcp-client/.cargo_cache_test/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/pr/oc/: proc-macro2
openhands-internal-mcp-client/.cargo_cache_test/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/qu/ot/: quote
openhands-internal-mcp-client/openhands_agent/: __init__.py  agent.py  prompts.py
openhands-sdk-rs/: Cargo.toml
openhands-sdk-rs/examples/: agent_demo.rs  remote_test.rs
openhands-sdk-rs/src/: agent.rs  events.rs  lib.rs  llm.rs  logger.rs  models.rs  prompts.rs  runtime.rs  session.rs  system.rs
openhands-sdk-rs/src/agent/: mod.rs  tools.rs
openhands-sdk-rs/src/agent/tools/: apply_patch.rs  file_editor.rs  glob.rs  grep.rs
openhands-sdk-rs/src/runtime/: bash.rs  docker.rs  local.rs  mod.rs  remote.rs
openhands-sdk-rs/src/services/: file.rs  mod.rs
