[package]
name = "openhands-agent-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
openhands-sdk-rs = { version = "0.1.0", path = "../openhands-sdk-rs" }
dotenv = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rmcp = { version = "0.12.0", features = ["transport-streamable-http-server", "macros"] }

[dev-dependencies]
tempfile = "3.24.0"
