[package]
name = "openhands-sdk-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
genai = "0.4.4"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.48.0", features = ["full"] }
