[package]
name = "openhands-sdk-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
genai = "0.4.4"
glob = "0.3.3"
rand = "0.9.2"
regex = "1.10"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
similar = "2.4"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "ansi"] }
colored = "3.0.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
sysinfo = "0.30"
lazy_static = "1.5.0"

[dev-dependencies]
dotenv = "0.15.0"
tempfile = "3.8"
tokio = { version = "1.48.0", features = ["full"] }
